:Date: $Date$
:Revision: $Revision$
:Web site: https://docutils.sourceforge.io/
:Copyright: This document has been placed in the public domain.

.. contents::


Release 0.22b.dev (unpublished)
===============================

* General

  - Add tox.ini to pyproject.toml to be in sdist (bug #486).
  - Fix license issue (bug #487).

* docutils/nodes.py

  - Raise ValueError if the "rawsource" argument in `Element.__init__()`
    is an `Element` instance.
    Catches errors like ``nodes.hint(nodes.paragraph())``.
  - New element category classes `SubStructural` and `PureTextElement`.
  - Fix element categories.
  - New method `Element.validate()` (work in progress).
  - New "attribute validating functions"
    convert string representations to correct data type,
    normalize values,
    raise ValueError for invalid attribute names or values.

* docutils/parsers/recommonmark_wrapper.py

  - New method `Parser.finish_parse()` to clean up (before validating).

* docutils/transforms/frontmatter.py

  - Update `DocInfo` to work with corrected element categories.

* docutils/transforms/misc.py:

  - Fix for `misc.Transitions`: report an error if a <transition> element
    follows a <meta> or <decoration> element as this is invalid
    according to ``docutils.dtd``.

* docutils/writers/manpage.py

  - Remove code for unused emdash bullets.
  - Feature-request #105 more informative document comments.
    docutils version in header
  - Stop converting text to full capitals (bug #481).

* docutils/writers/docutils-xml.py

  - Do not increase indentation of follow-up lines inside inline elements.
    when formatting with `indents`_.



Release 0.21.2 (2024-04-23)
===========================

* Declare support for languages Georgian and Catalan (Valencian).

* docs/ref/docutils.dtd

  - Remove declaration of element <info>.
  - Remove <decoration> from content declaration of <section> elements.

* Fix test failures.


Release 0.21.1 (2024-04-10)
===========================
