@@ -24,12 +24,14 @@ Release 0.22b.dev (unpublished)
 
 * docutils/nodes.py
 
-  - Raise ValueError if the "rawsource" argument in `Element.__init__()`
+  - Raise TypeError if the "rawsource" argument in `Element.__init__()`
     is an `Element` instance.
     Catches errors like ``nodes.hint(nodes.paragraph())``.
   - New element category classes `SubStructural` and `PureTextElement`.
   - Fix element categories.
-  - New method `Element.validate()` (work in progress).
+  - New method `Element.validate()`: raise `nodes.ValidationError` if
+    the element does not comply with the "Docutils Document Model"
+    (work in progress).
   - New "attribute validating functions"
     convert string representations to correct data type,
     normalize values,
